--- a/index.html
+++ b/index.html
@@ -16,5 +16,34 @@
             </ul>
         </nav>
    </header>
+
+   <h1>Drew Rosenberg's Resume</h1>
+
+   <div>
+        <h2>Contact Information</h2>
+        <p>arosenberg3@hawk.iit.edu</p>
+   </div>
+
+   <div>
+        <h2>Education Information</h2>
+
+        <h3>Jones College Prep</h3>
+        <ul>
+            <li>Senior</li>
+            <li>Selective Enrollment Chciago Public High School</li>
+        </ul>
+
+        <h4>Current Courses</h4>
+        <ul>
+            <li>IMTD-361</li>
+            <li>CS 331: Data Structures and Algorithms</li>
+            <li>AP Calculus AB</li>
+            <li>AP English Literature and Composition</li>
+            <li>AP Macroeconomics</li>
+            <li>Honors Spanish IV</li>
+            <li>Honors Drama I</li>
+        </ul>
+   </div>
+   
 </body>
 </html>
