added cs experience

--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
             <li>Honors Drama I</li>
         </ul>
    </div>
+
+   <div>
+        <h2>Computer Science Experience</h2>
+
+        <h3>Programming Languages:</h3>
+        <ul>
+            <li>HTML/CSS/JS</li>
+            <li>Java</li>
+            <li>Python</li>
+        </ul>
+
+        <ul>
+            <li>Power Up Tech Academy - Student from 5th to 11th Grade</li>
+            <li>Volunteered to teach Scratch to lower school students</li>
+        </ul>
+   </div>
    
 </body>
 </html>
