--- a/index.html
+++ b/index.html
@@ -57,9 +57,19 @@
 
         <ul>
             <li>Power Up Tech Academy - Student from 5th to 11th Grade</li>
+            <li>IC4 Program - Mentor</li>
             <li>Volunteered to teach Scratch to lower school students</li>
         </ul>
    </div>
-   
+
+   <div>
+        <h2>Activities</h2>
+
+        <ul>
+            <li>Jones College Prep Computer Science Honors Society, Vice President</li>
+            <li>Jones College Prep Robotics Club</li>
+            <li>Lakeview Pantry, Volunteer</li>
+        </ul>
+   </div>
 </body>
 </html>
