--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
         </ul>
 
         <ul>
+            <li>AP Computer Science A</li>
+            <li>AP Computer Science Principles</li>
             <li>Power Up Tech Academy - Student from 5th to 11th Grade</li>
             <li>IC4 Program - Mentor</li>
             <li>Volunteered to teach Scratch to lower school students</li>
