added jones logo to resume

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <h2>Education Information</h2>
 
         <h3>Jones College Prep</h3>
+
+        <img src="images/joneslogo.jpg" alt="Jones College Prep Logo">
+
         <ul>
             <li>Senior</li>
             <li>Selective Enrollment Chciago Public High School</li>
