added footer and updated tags

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
    <h1>Drew Rosenberg's Resume</h1>
 
-   <div>
+   <section>
         <h2>Contact Information</h2>
         <p>arosenberg3@hawk.iit.edu</p>
-   </div>
+   </section>
 
-   <div>
+   <section>
         <h2>Education Information</h2>
 
         <h3>Jones College Prep</h3>
@@ -34,6 +34,7 @@
         <ul>
             <li>Senior</li>
             <li>Selective Enrollment Chciago Public High School</li>
+            <li>Locted in the South Loop, Chicago, IL</li>
         </ul>
 
         <h4>Current Courses</h4>
@@ -46,28 +47,33 @@
             <li>Honors Spanish IV</li>
             <li>Honors Drama I</li>
         </ul>
-   </div>
+   </section>
 
-   <div>
+   <section>
         <h2>Computer Science Experience</h2>
 
-        <h3>Programming Languages:</h3>
-        <ul>
-            <li>HTML/CSS/JS</li>
-            <li>Java</li>
-            <li>Python</li>
-        </ul>
+        <section>
+            <h3>Programming Languages:</h3>
+            <ul>
+                <li>HTML/CSS/JS</li>
+                <li>Java</li>
+                <li>Python</li>
+            </ul>
+        </section>
+        
 
-        <ul>
-            <li>AP Computer Science A</li>
-            <li>AP Computer Science Principles</li>
-            <li>Power Up Tech Academy - Student from 5th to 11th Grade</li>
-            <li>IC4 Program - Mentor</li>
-            <li>Volunteered to teach Scratch to lower school students</li>
-        </ul>
-   </div>
+        <section>
+            <ul>
+                <li>AP Computer Science A</li>
+                <li>AP Computer Science Principles</li>
+                <li>Power Up Tech Academy - Student from 5th to 11th Grade</li>
+                <li>IC4 Program - Mentor</li>
+                <li>Volunteered to teach Scratch to lower school students</li>
+            </ul>
+        </section>
+   </section>
 
-   <div>
+   <section>
         <h2>Activities</h2>
 
         <ul>
@@ -75,6 +81,13 @@
             <li>Jones College Prep Robotics Club</li>
             <li>Lakeview Pantry, Volunteer</li>
         </ul>
-   </div>
+    </section>
+
+    <footer>
+        <p>Created by Drew Rosenberg</p>
+        <address>
+            <p>Contact: <a href="mailto:arosenberg3@hawk.iit.edu">arosenberg3@hawk.iit.edu</a></p>
+        </address>
+    </footer>
 </body>
 </html>
