Updated cs section headings

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         
 
         <section>
+            <h3>Computer Science Classes and Experiences</h3>
             <ul>
                 <li>AP Computer Science A</li>
                 <li>AP Computer Science Principles</li>
