--- a/biking.html
+++ b/biking.html
@@ -27,5 +27,18 @@
             <li>Enjoy riding new trails</li>
         </ul>
     </section>
+
+    <section>
+        <h2>Bike Details</h2>
+
+        <ul>
+            <li>Brand: Giant</li>
+            <li>Bike Type: Hybrid</li>
+        </ul>
+
+        <p>I like a Hybrid Bike becuase of the flexibility that it provides. It allows me to ride around the city, and also ride along different types of trails, such as both paved and crushed gravel trails.</p>
+        
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/FM2SFXZ1IG0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section>
 </body>
 </html>
