added ride details

--- a/biking.html
+++ b/biking.html
@@ -40,5 +40,28 @@
         
         <iframe width="560" height="315" src="https://www.youtube.com/embed/FM2SFXZ1IG0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
+
+    <section>
+        <h2>Common Rides</h2>
+
+        <ul>
+            <li>Lakefront Trail</li>
+            <li>The 606</li>
+            <li>The Green Bay Trail</li>
+            <li>North Shore Channel Trail</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Significant Rides</h2>
+
+        <ul>
+            <li>Croatia - Islands in the Adriatic Sea</li>
+            <li>Crater Lake and Bend, Oregon</li>
+            <li>Chicago to Kenosha, Wisconsin</li>
+            <li>Kal-Haven Trail - Kalamazoo to South Haven, Michigan</li>
+            <li>Chicago to Hammond, Indiana</li>
+        </ul>
+    </section>
 </body>
 </html>
