--- a/biking.html
+++ b/biking.html
@@ -63,5 +63,12 @@
             <li>Chicago to Hammond, Indiana</li>
         </ul>
     </section>
+
+    <footer>
+        <p>Created by Drew Rosenberg</p>
+        <address>
+            <p>Contact: <a href="mailto:arosenberg3@hawk.iit.edu">arosenberg3@hawk.iit.edu</a></p>
+        </address>
+    </footer>
 </body>
 </html>
