added biking image

--- a/biking.html
+++ b/biking.html
@@ -25,6 +25,8 @@
             <li>Favorite Hobby</li>
             <li>Avid Rider</li>
             <li>Enjoy riding new trails</li>
+            <li>Favorite Trail: Green Bay Trail</li>
+            <li>Enjoy challening myself wit hnew rides and to ride further</li>
         </ul>
     </section>
 
@@ -62,6 +64,8 @@
             <li>Kal-Haven Trail - Kalamazoo to South Haven, Michigan</li>
             <li>Chicago to Hammond, Indiana</li>
         </ul>
+
+        <img src="images/biking.jpg" alt="Drew Biking">
     </section>
 
     <footer>
