added hiking benefits

--- a/hiking.html
+++ b/hiking.html
@@ -16,5 +16,24 @@
             </ul>
         </nav>
    </header>
+
+   <h1>Hiking</h1>
+
+   <section>
+        <h2>Description</h2>
+        <p>Hiking is another one of my hobbies. I enjoy exploring and being in nature. When I hike, I enjoy taking in the scenery and the landscapes, and seeing new places.</p>
+   </section>
+
+   <section>
+        <h2>Benefits</h2>
+        <ol>
+            <li>See beautiful scenery and landscapes</li>
+            <li>Exercise and Physical Activity</li>
+            <li>Wildlife Sightings</li>
+            <li>Sense of accomplishment</li>
+            <li>Determination and perseverance are necessary</li>
+        </ol>
+   </section>
+
 </body>
 </html>
