--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="index.html">Resume</a></li>
                 <li><a href="biking.html">Biking</a></li>
-                <li><a href="">Page 3</a></li>
+                <li><a href="hiking.html">Hiking</a></li>
             </ul>
         </nav>
    </header>
@@ -87,7 +87,7 @@
     <footer>
         <p>Created by Drew Rosenberg</p>
         <address>
-            <p>Contact: <a href="mailto:arosenberg3@hawk.iit.edu">arosenberg3@hawk.iit.edu</a></p>
+            <p><strong>Contact:</strong> <a href="mailto:arosenberg3@hawk.iit.edu">arosenberg3@hawk.iit.edu</a></p>
         </address>
     </footer>
 </body>
