added favorite parks

--- a/hiking.html
+++ b/hiking.html
@@ -35,5 +35,16 @@
         </ol>
    </section>
 
+   <section>
+        <h2>My Favorite National Parks</h2>
+
+        <ol>
+            <li>Yellowstone National Park</li>
+            <li>Glacier National Park</li>
+            <li>Zion National Park</li>
+            <li>Acadia National Park</li>
+            <li>Crater Lake National Park</li>
+        </ol>
+   </section>
 </body>
 </html>
