working on favorite activities

--- a/hiking.html
+++ b/hiking.html
@@ -46,5 +46,15 @@
             <li>Crater Lake National Park</li>
         </ol>
    </section>
+
+   <section>
+        <h2>Favorite Activities</h2>
+
+        <h3>Yellowstone National Park</h3>
+        <ol>
+            <li>Old Faithful Geyser</li>
+            <li>Spotting A Wolf</li>
+        </ol>
+   </section>
 </body>
 </html>
