updated biking photo with description

--- a/biking.html
+++ b/biking.html
@@ -65,7 +65,10 @@
             <li>Chicago to Hammond, Indiana</li>
         </ul>
 
-        <img src="images/biking.jpg" alt="Drew Biking">
+        <section>
+            <img src="images/biking.jpg" alt="Drew Biking">
+            <p>Above I am biking in Croatia. This was an extremely special trip for me, as I loved biking on all the hills and interesting teerain on Croatia's many islands in the Adriatic Sea</p>
+        </section>
     </section>
 
     <footer>
