--- a/hiking.html
+++ b/hiking.html
@@ -54,7 +54,11 @@
    </section>
 
    <section>
-        <h2>Favorite Activities</h2>
+        <h2>Favorite Hikes and Experiences</h2>
+
+        <img src="images/hiking.jpg" alt="Drew at Waterfall Hike">
+
+        <p>I think that each national park is incredibly special and unoique. When I hike in a different park, the experiece is different each time, but still amazing. For instance, when I was in Zion National Park, it was 100 degrees Farenheight every day. However, when I was in Glacier National Park, it was actively snowing at the top of a big peak <strong>in July!</strong>. In each park, I can alawyas experience something new!</p>
 
         <h3>Yellowstone National Park</h3>
         <ol>
@@ -62,5 +66,12 @@
             <li>Spotting A Wolf</li>
         </ol>
    </section>
+
+   <footer>
+    <p>Created by Drew Rosenberg</p>
+    <address>
+        <p><strong>Contact:</strong> <a href="mailto:arosenberg3@hawk.iit.edu">arosenberg3@hawk.iit.edu</a></p>
+    </address>
+</footer>
 </body>
 </html>
