--- a/biking.html
+++ b/biking.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="index.html">Resume</a></li>
                 <li><a href="biking.html">Biking</a></li>
-                <li><a href="">Page 3</a></li>
+                <li><a href="hiking.html">Hiking</a></li>
             </ul>
         </nav>
    </header>
