--- a/hiking.html
+++ b/hiking.html
@@ -56,7 +56,10 @@
    <section>
         <h2>Favorite Hikes and Experiences</h2>
 
-        <img src="images/hiking.jpg" alt="Drew at Waterfall Hike">
+        <section>
+            <img src="images/hiking.jpg" alt="Drew at Waterfall Hike">
+            <p>Above I am at a waterfall hike. Waterfall hikes are interesting to me because you start to hear the water as you approach the fall, and then the end is an exciting big reveal!</p>
+        </section>
 
         <p>I think that each national park is incredibly special and unoique. When I hike in a different park, the experiece is different each time, but still amazing. For instance, when I was in Zion National Park, it was 100 degrees Farenheight every day. However, when I was in Glacier National Park, it was actively snowing at the top of a big peak <strong>in July!</strong>. In each park, I can alawyas experience something new!</p>
 
