updated favorite hikes

--- a/hiking.html
+++ b/hiking.html
@@ -63,11 +63,23 @@
 
         <p>I think that each national park is incredibly special and unoique. When I hike in a different park, the experiece is different each time, but still amazing. For instance, when I was in Zion National Park, it was 100 degrees Farenheight every day. However, when I was in Glacier National Park, it was actively snowing at the top of a big peak <strong>in July!</strong>. In each park, I can alawyas experience something new!</p>
 
-        <h3>Yellowstone National Park</h3>
-        <ol>
-            <li>Old Faithful Geyser</li>
-            <li>Spotting A Wolf</li>
-        </ol>
+        <section>
+            <h3>Yellowstone National Park</h3>
+            <ol>
+                <li>Old Faithful Geyser</li>
+                <li>Mount Washburn</li>
+                <li>Spotting A Wolf</li>
+            </ol>
+        </section>
+            
+        <section>
+            <h3>Glacier National Park</h3>
+            <ol>
+                <li>Iceberg Lake</li>
+                <li>Logan Pass</li>
+                <li>Going to the Sun Road</li>
+            </ol>
+        </section>
    </section>
 
    <footer>
