updated file names

--- a/biking.html
+++ b/biking.html
@@ -26,7 +26,7 @@
             <li>Avid Rider</li>
             <li>Enjoy riding new trails</li>
             <li>Favorite Trail: Green Bay Trail</li>
-            <li>Enjoy challening myself wit hnew rides and to ride further</li>
+            <li>Enjoy challenging myself with new rides and riding further</li>
         </ul>
     </section>
 
@@ -66,8 +66,8 @@
         </ul>
 
         <section>
-            <img src="images/biking.jpg" alt="Drew Biking">
-            <p>Above I am biking in Croatia. This was an extremely special trip for me, as I loved biking on all the hills and interesting teerain on Croatia's many islands in the Adriatic Sea</p>
+            <img src="images/biking.JPG" alt="Drew Biking">
+            <p>Above I am biking in Croatia. This was an extremely special trip for me, as I loved biking on all the hills and interesting terrain on Croatia's many islands in the Adriatic Sea</p>
         </section>
     </section>
 
