--- a/hiking.html
+++ b/hiking.html
@@ -48,7 +48,7 @@
 
         <section>
             <h3>Yellowstone National Park</h3>
-            <p>Yellowstone is my favotite national park for a number of reasons. Yellowstone was the first national park that I went to. It was very special for me to be explroing in the Wyoming mountains. Also, it was fun to see Old Faithful in person. I also experienced many great hikes around the park, and enjoyed the time with my family. Lastly, I loved all of the wildlife. I saw herds of bison, mooses, and more. I even spotted a wolf one when driving back from a hike in the evening. It was very cool to see the wolf appear in the trees on the side of the road, and how it acted. Yellowstone will always be a very special place to me!</p>
+            <p>Yellowstone is my favorite national park for a number of reasons. Yellowstone was the first national park that I went to. It was very special for me to be explroing in the Wyoming mountains. Also, it was fun to see Old Faithful in person. I also experienced many great hikes around the park, and enjoyed the time with my family. Lastly, I loved all of the wildlife. I saw herds of bison, mooses, and more. I even spotted a wolf once when driving back from a hike in the evening. It was very cool to see the wolf appear in the trees on the side of the road, and how it acted. Yellowstone will always be a very special place to me!</p>
         </section>
 
    </section>
@@ -57,11 +57,11 @@
         <h2>Favorite Hikes and Experiences</h2>
 
         <section>
-            <img src="images/hiking.jpg" alt="Drew at Waterfall Hike">
+            <img src="images/hiking.JPG" alt="Drew at Waterfall Hike">
             <p>Above I am at a waterfall hike. Waterfall hikes are interesting to me because you start to hear the water as you approach the fall, and then the end is an exciting big reveal!</p>
         </section>
 
-        <p>I think that each national park is incredibly special and unoique. When I hike in a different park, the experiece is different each time, but still amazing. For instance, when I was in Zion National Park, it was 100 degrees Farenheight every day. However, when I was in Glacier National Park, it was actively snowing at the top of a big peak <strong>in July!</strong>. In each park, I can alawyas experience something new!</p>
+        <p>I think that each national park is incredibly special and unoique. When I hike in a different park, the experiece is different each time, but still amazing. For instance, when I was in Zion National Park, it was 100 degrees Farenheight every day. However, when I was in Glacier National Park, it was actively snowing at the top of a big peak <strong>in July!</strong>. In each park, I can always experience something new!</p>
 
         <section>
             <h3>Yellowstone National Park</h3>
