--- a/hiking.html
+++ b/hiking.html
@@ -57,6 +57,7 @@
         <h2>Favorite Hikes and Experiences</h2>
 
         <section>
+            <h3>Waterfall Hike</h3>
             <img src="images/hiking.JPG" alt="Drew at Waterfall Hike">
             <p>Above I am at a waterfall hike. Waterfall hikes are interesting to me because you start to hear the water as you approach the fall, and then the end is an exciting big reveal!</p>
         </section>
