updated biking headings in a section

--- a/biking.html
+++ b/biking.html
@@ -66,6 +66,7 @@
         </ul>
 
         <section>
+            <h3>Biking in Croatia</h3>
             <img src="images/biking.JPG" alt="Drew Biking">
             <p>Above I am biking in Croatia. This was an extremely special trip for me, as I loved biking on all the hills and interesting terrain on Croatia's many islands in the Adriatic Sea</p>
         </section>
