Fixed content ordering

--- a/hiking.html
+++ b/hiking.html
@@ -60,8 +60,6 @@
         <p>Above I am at a waterfall hike. Waterfall hikes are interesting to me because you start to hear the water as you approach the fall, and then the end is an exciting big reveal!</p>
       </section>
 
-      <p>I think that each national park is incredibly special and unoique. When I hike in a different park, the experiece is different each time, but still amazing. For instance, when I was in Zion National Park, it was 100 degrees Farenheight every day. However, when I was in Glacier National Park, it was actively snowing at the top of a big peak <strong>in July!</strong>. In each park, I can always experience something new!</p>
-
       <section>
         <h3>Yellowstone National Park</h3>
         <ol>
@@ -79,6 +77,8 @@
           <li>Going to the Sun Road</li>
         </ol>
       </section>
+
+      <p>I think that each national park is incredibly special and unique. When I hike in a different park, the experiece is different each time, but still amazing. For instance, when I was in Zion National Park, it was 100 degrees Farenheight every day. However, when I was in Glacier National Park, it was actively snowing at the top of a big peak <strong>in July!</strong>. In each park, I can always experience something new!</p>
 
     </section>
 
